RESOLVED FIXED297554
[uBlock Origin Lite] Web page crashes with URL Tracking Filter list enabled
https://bugs.webkit.org/show_bug.cgi?id=297554
Summary [uBlock Origin Lite] Web page crashes with URL Tracking Filter list enabled
Kiara Rose
Reported 2025-08-18 15:12:11 PDT
Attachments
Kiara Rose
Comment 1 2025-08-20 16:48:47 PDT
EWS
Comment 2 2025-08-26 14:33:18 PDT
Committed 299173@main (c74275db2db5): <https://commits.webkit.org/299173@main> Reviewed commits have been landed. Closing PR #49687 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.